--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ position:relevant;
 .front {
   transform: translateZ(245px);
   position:absolute;
-  background-color:rgb(255, 215, 0, .5);
+  background-image:url(" https://cdn.britannica.com/09/188709-050-03BF34CB/Michael-Jordan.jpg ");
 	border-style:outset;
        border-color:rgb(255, 255, 255);
 }
@@ -437,7 +437,7 @@ body{
    <div class="side top"></div>
    <div class="side left"><div class="leftgarage"></div></div>
    <div class="side right"></div>
-   <div class="side front"> <div class="frontwindow"></div>  <div class="frontwindow2"></div>  <div class="frontview"></div> <div class="frontdoor"></div> <div class="frontwindow3"></div> <div class="frontwindow4"></div>  </div>
+   <div class="side front">  </div>
       <div class="side back"></div>
 </div>
 
