--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@ position:relevant;
   transform: translateZ(245px);
   position:absolute;
   background-image:url(" https://cdn.britannica.com/09/188709-050-03BF34CB/Michael-Jordan.jpg ");
-	border-style:outset;
+  background-size:100% 100%;
+   border-style:outset;
        border-color:rgb(255, 255, 255);
 }
 
