--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@ position:relevant;
 
 .back {
   transform: translateZ(-115px);
+  background-image:url("https://i.pinimg.com/736x/89/be/b1/89beb1f8c77d3d62b1d8f9de723bc57d.jpg");
+  background-size:100% 100%;
   transform: rotateX(90deg);
   transform-origin: center;
   background-color:rgb(255, 215, 0, .5);
@@ -251,7 +253,7 @@ position:relevant;
 .front {
   transform: translateZ(245px);
   position:absolute;
-  background-image:url(" https://cdn.britannica.com/09/188709-050-03BF34CB/Michael-Jordan.jpg ");
+  background-image:url("https://cdn.britannica.com/09/188709-050-03BF34CB/Michael-Jordan.jpg ");
   background-size:100% 100%;
    border-style:outset;
        border-color:rgb(255, 255, 255);
