--- a/index.html
+++ b/index.html
@@ -243,11 +243,10 @@ position:relevant;
   transform: translateZ(-115px);
   background-image:url("https://i.pinimg.com/736x/89/be/b1/89beb1f8c77d3d62b1d8f9de723bc57d.jpg");
   background-size:100% 100%;
-  transform: rotateX(90deg);
-  transform-origin: center;
   background-color:rgb(255, 215, 0, .5);
-	border-style:outset;
-       border-color:rgb(255, 255, 255);
+  border-style:outset;
+    border-color:rgb(255, 255, 255);
+   position:absolute;
 }
   
 .front {
