--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ position:relevant;
 }
 
 .back {
-  transform: translateZ(-115px);
+  transform: translateZ(-115px) rotateY(360deg);
   background-image:url("https://i.pinimg.com/736x/89/be/b1/89beb1f8c77d3d62b1d8f9de723bc57d.jpg");
   background-size:100% 100%;
   background-color:rgb(255, 215, 0, .5);
