--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@ position:relevant;
   width: 100%;
   transform: translateZ(-115px) rotateY(90deg);
   transform-origin: right;
-  background-color:rgb(255, 215, 50, .8);
+  background-size:100% 100%;
+  background-image:url( "https://lh3.googleusercontent.com/sGSaN5LwZIu8XW_oBH5NcdgCUDYIV5PhD7B56RleVB9oKfGhKDwtkERvP6foc0Yio3GwnSlKR-d8doAUUFAqiuom5LFZJzj8-MLQJ8T9ZMAXNfotsosCOv71A0UnqnKYI6BuG16mO2GO0kRiepoLUc8SwB_y_M-sM5p3oW2ibVinI7Z2lXFrKDHEPM9wzye7i6gYuBvyVWB8q9uQPgM942FjZNsOQ--UNq9d4DisEIMSpX-31YHvpmlrQwDqa6JKsoGeyB_CiJJ8ZDLkYyBzj4vzwMX_NUPB3tZrDk_3-HaB5B7vuq5sFLrBX5FBqlY2COkeZENrxIQCzAYpEWv8LuoxGzGIzjp-85_uQePmN-Zgc7MYJTwEhPRnAHYzPNdRkyJhINpNwt_RisSk3uuwx7ORTzzDZFOQCv3-Kp4QyCeh2uL9k-yrA7DWbHvpoflfd4-UxnU1CNh4F6Ldf1jIiFyDeBsiiuvLB2K0_3JzWrjCBv8CF8KjINnFUIAa23HITbZ4Lkj6zqDgYAY1SrCUfXVJIiBjCJNDgaiVCQchvTgXVI0YuyvnkU9ciGTsrcSs5NmFQYX_xwiSEN_yzUyuWQqcvjRJwTzoICnPUUa9tL36ynFfvpsooZKacywFSMpYs6L2zV-81rYxyFUc_G28J4w7c1SmuVgm_AXghZBluoWvhQZ8Am4nAQNjcSP12XTGqeXOD9lVJQhB9csVfvoiaeALKflx67WbS9PywG4RlyzYowUvCPcArhe7H7Jj5u_JfgbA2-v1CaTc8YWPbW6uwVeAgsnX8nW10uAO=w311-h437-no?authuser=0");
   border-style:outset;
        border-color:rgb(255, 255, 255);
 }	
