--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@ h9{
 }
 h7{
 font-color:#ffffff;
-
 position:relevant;
 }
 
@@ -344,7 +343,8 @@ position:relevant;
   width: 100%;
   transform: translateZ(-115px) rotateY(-90deg);
   transform-origin: left;
-  background-color:rgb(255, 215, 0, .5);
+  background-size:100% 100%;
+  background-image:url("https://preview.redd.it/38mt94kum0y71.jpg?width=640&crop=smart&auto=webp&s=3a932ec80272ecbf7ac3a08296859fca12a3f39e");
   border-style:outset;
        border-color:rgb(255, 255, 255);
 }	
