--- a/index.html
+++ b/index.html
@@ -417,8 +417,7 @@ body{
          
 <body>
 
-	<a href="https://diamondrolls.github.io/thepremiumway/">  <div class="registrationbutton2"> <h7 class="neon" data-text="Explore"> Explore </h7></div></a>
-<div class="cube">
+	<div class="cube">
    <div class="side top"></div>
    <div class="side left"><div class="leftgarage"></div></div>
    <div class="side right"></div>
@@ -427,7 +426,7 @@ body{
 </div>
 
 
- <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" Lake Mansion "> Lake Mansion </h7>  </div></a></center>
+ <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" Trading Card "> Trading Card </h7>  </div></a></center>
 
   	<script>
 
