--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		   top:25%;
 }
 	.registrationbutton {	
-        background-color:rgb(255, 215, 0, .5);
+        background-color:rgb(175, 175, 175);
 	background-size:300px 150px;      
 	z-index:999999;
 	position:absolute;
