--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ position:relevant;
 .front {
   transform: translateZ(245px);
   position:absolute;
-  background-image:url("https://cdn.britannica.com/09/188709-050-03BF34CB/Michael-Jordan.jpg ");
+  background-image:url(" https://cdn.vox-cdn.com/thumbor/C-A4NldVvGjNGNZIKwKhy31aR18=/1400x1050/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/22709136/LeBron_James_Tune_Squad.jpg ");
   background-size:100% 100%;
    border-style:outset;
        border-color:rgb(255, 255, 255);
