--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ position:relevant;
 
 .back {
   transform: translateZ(-115px) rotateY(180deg);
-  background-image:url("https://i.pinimg.com/736x/89/be/b1/89beb1f8c77d3d62b1d8f9de723bc57d.jpg");
+  background-image:url(" https://www.nba.com/lakers/sites/lakers/files/2021_lal_mktg_number6_756x440_v1_jd.jpg");
   background-size:100% 100%;
   background-color:rgb(255, 215, 0, .5);
   border-style:outset;
