--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ position:relevant;
   transform: translateZ(-115px) rotateY(-90deg);
   transform-origin: left;
   background-size:100% 100%;
-  background-image:url("https://preview.redd.it/38mt94kum0y71.jpg?width=640&crop=smart&auto=webp&s=3a932ec80272ecbf7ac3a08296859fca12a3f39e");
+  background-image:url(" https://www.ixpap.com/images/2021/01/lebron-james-wallpaper-ixpap.jpg");
   border-style:outset;
        border-color:rgb(255, 255, 255);
 }	
