--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ position:relevant;
 
 .back {
   transform: translateZ(-115px) rotateY(180deg);
-  background-image:url(" https://www.nba.com/lakers/sites/lakers/files/2021_lal_mktg_number6_756x440_v1_jd.jpg");
+  background-image:url(" https://pbs.twimg.com/media/FNtbKvCVIAoNvvS?format=jpg&name=large");
   background-size:100% 100%;
   background-color:rgb(255, 215, 0, .5);
   border-style:outset;
@@ -248,7 +248,7 @@ position:relevant;
 .front {
   transform: translateZ(245px);
   position:absolute;
-  background-image:url(" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0GgDhnTMu4O9fPiOTvNwUQYptCUmf9PJU1A&usqp=CAU ");
+  background-image:url(" https://tnimage.s3.hicloud.net.tw/photos/2022/AP/20220317/bf37077e69c844e2b65d28f63b239e39.jpg ");
   background-size:100% 100%;
    border-style:outset;
        border-color:rgb(255, 255, 255);
