--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ position:relevant;
 
 .back {
   transform: translateZ(150px) rotateY(180deg);
-  background-image:url(" https://pbs.twimg.com/media/FNtbKvCVIAoNvvS?format=jpg&name=large");
+  background-image:url(" https://i.pinimg.com/originals/87/24/06/8724066363ee463336a6bd1e24fc44ff.jpg");
   background-size:100% 100%;
   background-color:rgb(255, 215, 0, .5);
   border-style:outset;
