--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		   top:25%;
 }
 	.registrationbutton {	
-        background-color:rgb(175, 175, 175);
-	background-size:300px 150px;      
+        background-image:url(" https://lh3.googleusercontent.com/zjZSIgbiUNGz8DHbUw0RoCFadpJvUuyXEfDZfGxjlDubbTx_FUYh9HY9AkL6P48gGLXHyC5rdMJgbwoMJlgsQe3OK7hljj2U2jTdA_hJ6zOCQ7cMNQuqv-o_qQw4d54ySCWq6CEmi3Deo7hTnOsxjAjMD8-Mz4TWPrBroUeZg8mXtyLfi1dK0pywl9bgUPHt38tHDBWgLovXGpZWbhZEjYGA_DSPIslqEdGPPX3fFiJdtQVmMxu9rE1Oim6Y9A2dSdr41pNpvFHh4EXCsoAExuSawN7j4QH7RCCSIY3Vo3wkyf-1lin7ySE9W6ufDr5zoPQdJ4nCrSj1cTuM9rssfA6NFR9qYaL1dKW6XsE5Rv7UoCBTGxF2pHbUacVmiFKjMK_WhKsc-POIDnD0L8gtKnjf73Ty-M39p8FoT1TncD78SYQ3dkLGwgE4IFjAlUkM5BpZHyPMMILMvhQtazHSIr00Aeq9Qp23rzGsEyJ5IIBEktyx6E3eXvZLWJNZ6m8tEUIhMRQtbHUoWIYAtCJS9HHvHKhutX27RvXdd_QEM20Kn0M2ZZZNBn9J46Fshg9BRf8OGOrFtnxHaVOzFw2mnCoQJvInUdO0NPEap1QGy_jZKXSJDUKAp_VOb5nDWVBp5PkUmPZAAqhYnVMKo9TjbofgDYcwuaYoEpLqrB746RUaulNMKY7MAb9JF8MDqPUrvPSKRIEiaI5MNjz8SHeOwZn_Up_W7mXiUwfLJZQc01z0W2qMZJNWY7NaDUc=w720-h340-no?authuser=0  ");
+	background-size:100% 150px;      
 	z-index:999999;
 	position:absolute;
 	border-radius:50px;
