--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ body{
 </div>
 
 
- <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" Trading Card "> Trading Card </h7>  </div></a></center>
+ <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" Notorious "> Notorious </h7>  </div></a></center>
 
   	<script>
 
