--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ ul li:hover ul li {
 }
 
 body{
-	background-image:url(" https://wallpaper.dog/large/10992225.jpg   ");
+	background-image:url(" https://i.pinimg.com/originals/8b/27/9f/8b279fa1be8a7c45e693b5562273f876.jpg   ");
         background-size:100% 2000px;
          overflow:hidden;
 	 width:98%;
@@ -423,7 +423,7 @@ body{
 </div>
 
 
- <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" LilFacebook "> LilFacebook </h7>  </div></a></center>
+ <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" Walden Curry Card "> Walden Curry Card </h7>  </div></a></center>
 
   	<script>
 
