--- a/index.html
+++ b/index.html
@@ -416,15 +416,10 @@ body{
 	    </head>
          
 <body>
-
-	<div class="cube">
-   <div class="side front">  </div>
-      <div class="side back"></div>
-</div>
-
-
- <center> <a href='https://diamondrolls.github.io/thepremiumway/'> <div class="registrationbutton"> <h7 class="neon" data-text=" Stephen Curry Card "> Stephen Curry Card </h7>  </div></a></center>
-
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2JbXS3AA0Vk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+	
   	<script>
 
 		</script>
