--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ position:relevant;
 }
 
 .back {
-  background-image:url("https://raw.githubusercontent.com/diamondrolls/homepage/master/images/Screenshot_20220823-191511_Chrome.jpg  ");
+  background-image:url("https://i.pinimg.com/564x/53/44/eb/5344ebfa72b9312ad619bb32a06a17eb.jpg  ");
 	background-size:100% 100%;
 	background-repeat:no-repeat;
   transform: translateZ(244px) rotateY(180deg);
@@ -251,7 +251,7 @@ padding-top:75px;
 }
   
 .front {
-   background-image:url(" https://raw.githubusercontent.com/diamondrolls/homepage/master/images/Screenshot_20220823-191511_Chrome.jpg ");
+   background-image:url("https://i.pinimg.com/564x/53/44/eb/5344ebfa72b9312ad619bb32a06a17eb.jpg  ");
 	background-size:100% 100%;
 	background-repeat:no-repeat;
   padding-top:75px;
