--- a/index.html
+++ b/index.html
@@ -63,19 +63,18 @@
 	border-style:outset;
 		   top:25%;
 }
-	.registrationbutton {	
-        background-image:url(" https://lh3.googleusercontent.com/zjZSIgbiUNGz8DHbUw0RoCFadpJvUuyXEfDZfGxjlDubbTx_FUYh9HY9AkL6P48gGLXHyC5rdMJgbwoMJlgsQe3OK7hljj2U2jTdA_hJ6zOCQ7cMNQuqv-o_qQw4d54ySCWq6CEmi3Deo7hTnOsxjAjMD8-Mz4TWPrBroUeZg8mXtyLfi1dK0pywl9bgUPHt38tHDBWgLovXGpZWbhZEjYGA_DSPIslqEdGPPX3fFiJdtQVmMxu9rE1Oim6Y9A2dSdr41pNpvFHh4EXCsoAExuSawN7j4QH7RCCSIY3Vo3wkyf-1lin7ySE9W6ufDr5zoPQdJ4nCrSj1cTuM9rssfA6NFR9qYaL1dKW6XsE5Rv7UoCBTGxF2pHbUacVmiFKjMK_WhKsc-POIDnD0L8gtKnjf73Ty-M39p8FoT1TncD78SYQ3dkLGwgE4IFjAlUkM5BpZHyPMMILMvhQtazHSIr00Aeq9Qp23rzGsEyJ5IIBEktyx6E3eXvZLWJNZ6m8tEUIhMRQtbHUoWIYAtCJS9HHvHKhutX27RvXdd_QEM20Kn0M2ZZZNBn9J46Fshg9BRf8OGOrFtnxHaVOzFw2mnCoQJvInUdO0NPEap1QGy_jZKXSJDUKAp_VOb5nDWVBp5PkUmPZAAqhYnVMKo9TjbofgDYcwuaYoEpLqrB746RUaulNMKY7MAb9JF8MDqPUrvPSKRIEiaI5MNjz8SHeOwZn_Up_W7mXiUwfLJZQc01z0W2qMZJNWY7NaDUc=w720-h340-no?authuser=0  ");
-	background-size:100% 150px;      
+	
+    .registrationbutton {	
 	z-index:999999;
 	position:absolute;
 	border-radius:50px;
         height:150px;
-        top:1300px;
-	width:90%;
-        left:50px;
+        top:200px;
+	width:400px;
 	border-style:outset;
-        border-color:rgb(255, 255, 255);
+        border-color:rgb(0, 255, 255);
 }
+ 
 
 		   .registrationbutton2{
 background-color:rgb(255, 215, 0, .5);
@@ -363,13 +362,15 @@ body{
 
 </style>
   <head>
+    
+    <div class="registrationbutton"> <h1 class="neon" data-text=" Troy Bandz "> Troy Bandz </h1> </div>
 	    </head>
          
 <body>
 <div class="cube">
    
-   <div class="side front"> <h1 class="neon" data-text=" 5000x "> 5000x </h1> </div>
- <div class="side back"> <h1 class="neon" data-text=" 5000x "> 5000x </h1> </div>
+   <div class="side front">  </div>
+ <div class="side back">  </div>
  </div>
 
 <center>
