--- a/index.html
+++ b/index.html
@@ -362,7 +362,9 @@ body{
 
 </style>
   <head>
-    
+    <meta name= "view port"
+	content= "width=device-width,
+	initial-scale=1.0">
     <div class="registrationbutton"> <h1 class="neon" data-text=" Troy Bandz "> Troy Bandz </h1> </div>
 	    </head>
          
